[package]
name = "dutch-auction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "dutch_auction"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.7.11"
thiserror = "1.0"
borsh = "0.9.1"
